--- a/auth/package.json
+++ b/auth/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.9",
     "express": "^4.18.2",
+    "express-openapi-validator": "^5.0.4",
     "express-validator": "^7.0.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
@@ -23,6 +24,8 @@
     "pino": "^8.14.1",
     "querystring": "^0.2.1",
     "request": "^2.88.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
@@ -39,6 +42,8 @@
     "@types/node": "^20.4.4",
     "@types/request": "^2.48.8",
     "@types/request-promise": "^4.1.48",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "nodemon": "^3.0.1",
     "pino-pretty": "^10.1.0",
